--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <header>
-        <h1>Calculator</h1>
-    </header>
-    <h2 class="top">This is a calculator</h2>
+    <h2>This is a calculator</h2>
     <calculator>
         <textbox>
             <input type="text" class="input" id="number" placeholder="Calculate Here">
@@ -62,5 +59,8 @@
             </row>
         </buttons>
     </calculator>
+    <br/>
+    <p>Thanks For Visiting</p>
+    <p>Regards! Muhammad Ahad&copy;</p>
 </body>
 </html>
