more buttons added

--- a/index.html
+++ b/index.html
@@ -43,19 +43,24 @@
                 <button type="button" class="btn btn-dark" onclick="getnumber('4')">4</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('5')">5</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('6')">6</button>
-                <button type="button" class="btn btn-dark" onclick="getnumber('*')">X</button>
+                <button type="button" class="btn btn-dark" onclick="getnumber('%')">%</button>
             </row>
             <row>
                 <button type="button" class="btn btn-dark" onclick="getnumber('1')">1</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('2')">2</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('3')">3</button>
-                <button type="button" class="btn btn-dark" onclick="getnumber('-')">-</button>
+                <button type="button" class="btn btn-dark" onclick="getnumber('*')">*</button>
             </row>
             <row>
                 <button type="button" class="btn btn-dark" onclick="getnumber('0')">0</button>
-                <button type="button" class="btn btn-dark" onclick="getnumber('.')">.</button>
-                <button type="button" class="btn btn-dark" onclick="Result()">=</button>
+                <button type="button" class="btn btn-dark" onclick="getnumber('-')">-</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('+')">+</button>
+                <button type="button" class="btn btn-dark" onclick="getnumber('/')">/</button>
+            </row>
+            <row>
+                <button type="button" class="btn btn-dark" onclick="getnumber('00')">00</button>
+                <button type="button" class="btn btn-dark" onclick="getnumber('.')">.</button>
+                <button type="button" class="btn btn-danger plus" onclick="Result()">=</button>
             </row>
         </buttons>
     </calculator>
