back button added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h2>This is a calculator</h2>
     <calculator>
         <textbox>
-            <input type="text" class="input" id="number" placeholder="Calculate Here">
+            <input readonly type="text" class="input" id="number" placeholder="Calculate Here">
         </textbox>
         <buttons>
             <row>
@@ -43,24 +43,26 @@
                 <button type="button" class="btn btn-dark" onclick="getnumber('4')">4</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('5')">5</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('6')">6</button>
-                <button type="button" class="btn btn-dark" onclick="getnumber('%')">%</button>
+                <button type="button" class="btn btn-danger" onclick="Back()" id="back"><i class="bi bi-backspace"></i></button>
             </row>
             <row>
                 <button type="button" class="btn btn-dark" onclick="getnumber('1')">1</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('2')">2</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('3')">3</button>
-                <button type="button" class="btn btn-dark" onclick="getnumber('*')">*</button>
+                <button type="button" class="btn btn-dark" onclick="getnumber('*')">x</button>
             </row>
             <row>
                 <button type="button" class="btn btn-dark" onclick="getnumber('0')">0</button>
-                <button type="button" class="btn btn-dark" onclick="getnumber('-')">-</button>
+                <button type="button" class="btn btn-dark" onclick="getnumber('-')">_</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('+')">+</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('/')">/</button>
             </row>
             <row>
                 <button type="button" class="btn btn-dark" onclick="getnumber('00')">00</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('.')">.</button>
-                <button type="button" class="btn btn-danger plus" onclick="Result()">=</button>
+                <button type="button" class="btn btn-dark" onclick="getnumber('%')">%</button>
+                <button type="button" class="btn btn-success" onclick="Result()">=</button>
+
             </row>
         </buttons>
     </calculator>
