on button changed to clear

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button type="button" class="btn btn-dark" onclick="getnumber('7')">7</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('8')">8</button>
                 <button type="button" class="btn btn-dark" onclick="getnumber('9')">9</button>
-                <button type="button" class="btn btn-success" onclick="Clear()">On</button>
+                <button type="button" class="btn btn-success" onclick="Clear()">C</button>
             </row>
             <row>
                 <button type="button" class="btn btn-dark" onclick="getnumber('4')">4</button>
